<resources>
    <string name="app_name">My weather</string>
    <string name="textCity">NameCity</string>
    <string name="cityNameMoscow">Moscow</string>
    <string name="textTempCurrent">temp</string>
    <string name="textNow">Now</string>
    <string name="textPlusOneHour">TextView</string>
    <string name="textPlusThreeHours">TextView</string>
    <string name="textPlusTwoHours">TextView</string>
    <string name="textTempNow">TextView</string>
    <string name="textTempPlusOneHour">TextView</string>
    <string name="textTempPlusTwoHours">TextView</string>
    <string name="textTempPlusThreeHours">TextView</string>
    <string name="textCurrentDayPlusOne">TextView</string>
    <string name="textCurrentDayPlusTwo">TextView</string>
    <string name="textCurrentDayPlusThree">TextView</string>
    <string name="textTempCurrentDayPlusOne">TextView</string>
    <string name="textTempCurrentDayPlusOneNight">TextView</string>
    <string name="textTempCurrentDayPlusTwo">TextView</string>
    <string name="textTempCurrentDayPlusTwoNight">TextView</string>
    <string name="textTempCurrentDayPlusThree">TextView</string>
    <string name="textTempCurrentDayPlusThreeNight">TextView</string>
    <string name="textWindNow">textWindNow</string>
    <string name="textWindPlusOneHour">TextView</string>
    <string name="textWindPlusTwoHours">TextView</string>
    <string name="textWindPlusThreeHours">TextView</string>
    <string name="textPressureNow">textPressureNow</string>
    <string name="textPressurePlusOneHour">TextView</string>
    <string name="textPressurePlusTwoHours">TextView</string>
    <string name="textPressurePlusThreeHours">TextView</string>
    <string name="textChooseCity">Choose city</string>
    <string name="checkbox_set_visible_wind">Display wind speed</string>
    <string name="checkbox_set_visible_pressure">Display atmospheric pressure</string>
    <string name="textUnitWind">m/s,</string>
    <string name="textUnitWindS">S</string>
    <string name="textUnitWindN">N</string>
    <string name="textUnitWindW">W</string>
    <string name="textUnitWindE">E</string>
    <string name="textUnitWindSW">SW</string>
    <string name="textUnitWindSE">SE</string>
    <string name="textUnitWindNW">NW</string>
    <string name="textUnitWindNE">NE</string>
    <string name="textUnitPressureNow">mm rt. st.</string>
    <string name="textNull"> </string>
    <string name="hint_choose_city">City</string>
    <string name="switch_type_degree">Temperature (C/F)</string>
    <string name="celsius">C</string>
    <string name="fahrenheit">F</string>
    <string name="units">Units</string>
    <string name="todo">Image with type weather</string>
    <string name="text_count_hours_between_forecasts">Count of hours between forecasts: </string>
    <string name="value_count_hours_between_forecasts">TextView</string>
    <string name="todoImageWithBack">Image Back</string>
    <string name="todoImageWithOk">Image OK</string>
    <string name="weather_from_yandex">Weather From Yandex</string>
    <string name="itemTextInRV">Item text</string>
    <string name="search_history">Search history</string>
    <string name="ok_button">OK</string>
    <string name="new_city">New city</string>
    <string name="check_cityname">Wrong city name</string>
    <string name="city_name">City name</string>
    <string name="add_new_city_snackbar">Add</string>
    <string name="add_city_msg">Add city</string>
    <string name="choose_city_snackbar">Сhoose city</string>
    <string name="dark_theme">Dark theme</string>
    <string name="developers">Developers</string>
    <string name="about_textview">Developer:</string>
    <string name="version_textview">My weather. Version 0.2</string>
    <string name="developer_textview">Zareckii Stanislav</string>
    <string name="сity_not_found">City not found</string>
    <string name="fail_connection">Fail connection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My weather</string>
    <string name="nav_header_subtitle">za@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_cities">Search history</string>
    <string name="menu_settings">Settings</string>
    <string name="about_developer">About developer</string>
    <string name="map">Map</string>
    <string name="phone">(492) 123–45–78</string>
    <string name="email">za@gmail.com</string>
    <string name="about_city_weather">Сity climate (Wiki)</string>
    <string name="exit">Exit</string>
    <string name="weather_yandex">Weather Yandex</string>
    <string name="add_city">Add</string>
    <string name="done">Done</string>
    <string name="enter_name">Enter city</string>
    <string name="exclamation">Error</string>
    <string name="turn_on_wifi">Wi-Fi</string>
    <string name="press_button">City not found. Fail connection!</string>
    <string name="check_weather">Server error</string>
    <string name="internet_connection_status_false">Not connection</string>
    <string name="weather_update_status">Weather update is not possible</string>
    <string name="not_connection_weather">Not connection. Weather update is not possible</string>
    <string name="current_position">Current position</string>
    <string name="not_supportet">Not supported in Android 5.0</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">Sign out</string>
</resources>

