<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_weather"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_cities"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/menu_cities" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/ic_developer"
            android:title="@string/about_developer" />
    </group>
</menu>