<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.geekbrains.myweatherv3.customview.ThermometerView
            android:id="@+id/thermometerView"
            android:layout_width="32dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/textTempCurrent"
            app:layout_constraintTop_toTopOf="@+id/textCity"
            app:level="50" />

        <TextView
            android:id="@+id/textCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/textCity"
            android:textSize="@dimen/sizeCityNameLand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTempCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:text="@string/textTempCurrent"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageTypsWeather"
            app:layout_constraintEnd_toStartOf="@+id/imageTypsWeather"
            app:layout_constraintTop_toTopOf="@+id/imageTypsWeather"
            app:layout_constraintVertical_bias="0.25" />


        <ImageView
            android:id="@+id/imageTypsWeather"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="@+id/textCity"
            app:layout_constraintStart_toStartOf="@+id/textCity"
            app:layout_constraintTop_toBottomOf="@+id/textCity"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textWindNow"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/textWindPlusOneHour"
            app:layout_constraintEnd_toStartOf="@+id/textUnitWind"
            app:layout_constraintTop_toTopOf="@+id/imageTypsWeather" />

        <TextView
            android:id="@+id/textPressureNow"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="4dp"
            android:text="@string/textPressurePlusOneHour"
            app:layout_constraintEnd_toStartOf="@+id/textUnitPressureNow"
            app:layout_constraintTop_toBottomOf="@+id/textWindNow" />

        <TextView
            android:id="@+id/textUnitWind"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/textUnitWind"
            app:layout_constraintStart_toEndOf="@+id/imageTypsWeather"
            app:layout_constraintTop_toTopOf="@+id/textWindNow" />

        <TextView
            android:id="@+id/textWindDegree"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/textUnitWindS"
            app:layout_constraintStart_toEndOf="@+id/textUnitWind"
            app:layout_constraintTop_toTopOf="@+id/textWindNow" />

        <TextView
            android:id="@+id/textUnitPressureNow"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/textUnitPressureNow"
            app:layout_constraintStart_toEndOf="@+id/imageTypsWeather"
            app:layout_constraintTop_toTopOf="@+id/textPressureNow" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hoursRecyclerView"
            style="@style/Margin"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noConnectionTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/daysRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hoursRecyclerView"/>

        <TextView
            android:id="@+id/noConnectionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/not_connection_weather"
            app:layout_constraintEnd_toEndOf="@+id/imageTypsWeather"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@+id/textTempCurrent"
            app:layout_constraintTop_toBottomOf="@+id/imageTypsWeather" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

